Remove Commented code

--- a/src/app/cms/home/home.component.html
+++ b/src/app/cms/home/home.component.html
@@ -17,30 +17,9 @@
         </div>
       </slide>
     </carousel>
-    <!-- <div class="carousel__slide__inner">
-      <div class="image-container">
-        <img class="carousel__image" src="assets/img/banner1.jpg" alt="Image" />
-      </div>
-      <div class="carousel__slide__overlay">
-        <div class="container position_set" [attr.data-aos]="'fade-up'">
-          <div class="row" [attr.data-aos]="'fade-up'" [attr.data-aos-delay]="150">
-            <div class="col-xl-12 col-lg-12">
-              <h1>
-                {{'IMPORTANT_NOTICE' | translate}}
-                 </h1>
-              <h2>
-                {{'FOR_FARMER_BROTHERS' | translate}}
-
-              </h2>
-              <a href="#" class="btn_draw">Draw tokens for Subsidy on Machinery/ Farm Ponds</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </div>
 
-  <div class="what_new">
+  <div class="what_new" [attr.data-aos]="'slide-left'">
     <div class="whatnew_inner">
       <h2 class="subheading">{{'WHATS_NEW' | translate}}</h2>
       <div class="scroll-bar-wrap">
