--- a/src/assets/css/dark.css
+++ b/src/assets/css/dark.css
@@ -28,7 +28,7 @@ body {background-color: #292c35;}
 }
 
 .back-to-top:hover i {
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 
 .back-to-top.active {
@@ -79,7 +79,7 @@ body {background-color: #292c35;}
 }
 
 #header .logo a span {
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 #header .logo p {
   /* font-size: 1.4rem; */
@@ -114,7 +114,7 @@ body {background-color: #292c35;}
   transition: 0.3s;
   /* font-size: 14px; */
   display: inline-block;
-  border: 2px solid #ffc451;
+  border: 2px solid var(--golden-tainoi);
 }
 
 .get-started-btn:hover {
@@ -214,7 +214,7 @@ body {background-color: #292c35;}
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover > a {
-  background-color: #ffc451;
+  background-color: var(--golden-tainoi);
 }
 
 .navbar .dropdown:hover > ul {
@@ -352,7 +352,7 @@ body {background-color: #292c35;}
 .navbar-mobile .active,
 .navbar-mobile li:hover > a {
   color: #151515;
-  background-color: #ffc451;
+  background-color: var(--golden-tainoi);
 }
 
 .navbar-mobile .getstarted,
@@ -388,7 +388,7 @@ body {background-color: #292c35;}
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover > a {
-  background-color: #ffc451;
+  background-color: var(--golden-tainoi);
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -427,7 +427,7 @@ body {background-color: #292c35;}
 }
 
 .carousel__slide__overlay h1 span {
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 
 .carousel__slide__overlay h2 {
@@ -475,7 +475,7 @@ body {background-color: #292c35;}
 }
 
 #hero h1 span {
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 
 #hero h2 {
@@ -495,7 +495,7 @@ body {background-color: #292c35;}
 #hero .icon-box i {
   /* font-size: 32px; */
   line-height: 1;
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 
 #hero .icon-box h3 {
@@ -513,11 +513,11 @@ body {background-color: #292c35;}
 }
 
 #hero .icon-box h3 a:hover {
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 
 #hero .icon-box:hover {
-  border-color: #ffc451;
+  border-color: var(--golden-tainoi);
 }
 
 @media (min-width: 1024px) {
@@ -620,7 +620,7 @@ section {
   /* font-size: 20px; */
   left: 0;
   top: -3px;
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 
 .about .content p:last-child {
@@ -638,7 +638,7 @@ section {
   transition: 0.3s;
   opacity: 1;
   filter: none;
-  border: 1px solid #ccc;
+  border: 1px solid var(--chinese-silver);
 }
 
 .clients .swiper-slide img:hover {
@@ -660,7 +660,7 @@ section {
 }
 
 .clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ffc451;
+  background-color: var(--golden-tainoi);
 }
 
 /*--------------------------------------------------------------
@@ -683,7 +683,7 @@ section {
 .features .icon-box i {
   /* font-size: 48px; */
   float: left;
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 
 .features .icon-box p {
@@ -745,7 +745,7 @@ section {
 }
 
 .services .icon-box h4 a:hover {
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 
 .services .icon-box p {
@@ -795,8 +795,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #ffc451;
-  border-color: #ffc451;
+  background: var(--golden-tainoi);
+  border-color: var(--golden-tainoi);
   color: #151515;
 }
 
@@ -831,7 +831,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #151515;
-  background: #ffc451;
+  background: var(--golden-tainoi);
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -908,7 +908,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -947,14 +947,14 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #ffc451;
+  border: 1px solid var(--golden-tainoi);
 }
 
 .portfolio-details
   .portfolio-details-slider
   .swiper-pagination
   .swiper-pagination-bullet-active {
-  background-color: #ffc451;
+  background-color: var(--golden-tainoi);
 }
 
 .portfolio-details .portfolio-info {
@@ -1019,7 +1019,7 @@ section {
 .counts .content .count-box i {
   display: block;
   /* font-size: 36px; */
-  color: #ffc451;
+  color: var(--golden-tainoi);
   float: left;
 }
 
@@ -1169,7 +1169,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ffc451;
+  background-color: var(--golden-tainoi);
   opacity: 1;
 }
 
@@ -1232,7 +1232,7 @@ section {
 
 .team .member .social a:hover {
   color: #151515;
-  background: #ffc451;
+  background: var(--golden-tainoi);
 }
 
 .team .member .social i {
@@ -1281,7 +1281,7 @@ section {
 
 .contact .info i {
   /* font-size: 20px; */
-  background: #ffc451;
+  background: var(--golden-tainoi);
   color: #151515;
   float: left;
   width: 44px;
@@ -1315,7 +1315,7 @@ section {
 
 .contact .php-email-form {
   width: 100%;
-  background: #fff;
+  background: var(--white);
 }
 
 .contact .php-email-form .form-group {
@@ -1324,7 +1324,7 @@ section {
 
 .contact .php-email-form .error-message {
   display: none;
-  color: #fff;
+  color: var(--white);
   background: #ed3c0d;
   text-align: left;
   padding: 15px;
@@ -1337,7 +1337,7 @@ section {
 
 .contact .php-email-form .sent-message {
   display: none;
-  color: #fff;
+  color: var(--white);
   background: #18d26e;
   text-align: center;
   padding: 15px;
@@ -1346,7 +1346,7 @@ section {
 
 .contact .php-email-form .loading {
   display: none;
-  background: #fff;
+  background: var(--white);
   text-align: center;
   padding: 15px;
 }
@@ -1373,7 +1373,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #ffc451;
+  border-color: var(--golden-tainoi);
 }
 
 .contact .php-email-form input {
@@ -1385,7 +1385,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #ffc451;
+  background: var(--golden-tainoi);
   border: 0;
   padding: 10px 24px;
   color: #151515;
@@ -1465,7 +1465,7 @@ section {
 #footer {
   background: black;
   padding: 0 0 10px 0;
-  color: #fff;
+  color: var(--white);
   /* font-size: 14px; */
 }
 
@@ -1489,7 +1489,7 @@ section {
 }
 
 #footer .footer-top .footer-info h3 span {
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 
 #footer .footer-top .footer-info p {
@@ -1497,14 +1497,14 @@ section {
   line-height: 24px;
   margin-bottom: 0;
   font-family: "Raleway", sans-serif;
-  color: #fff;
+  color: var(--white);
 }
 
 #footer .footer-top .social-links a {
   /* font-size: 18px; */
   display: inline-block;
   background: #292929;
-  color: #fff;
+  color: var(--white);
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
@@ -1516,7 +1516,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #ffc451;
+  background: var(--golden-tainoi);
   color: #151515;
   text-decoration: none;
 }
@@ -1524,7 +1524,7 @@ section {
 #footer .footer-top h4 {
   /* font-size: 16px; */
   font-weight: 600;
-  color: #fff;
+  color: var(--white);
   position: relative;
   padding-bottom: 12px;
 }
@@ -1541,7 +1541,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #ffc451;
+  color: var(--golden-tainoi);
   /* font-size: 18px; */
   line-height: 1;
 }
@@ -1557,19 +1557,19 @@ section {
 }
 
 #footer .footer-top .footer-links ul a {
-  color: #fff;
+  color: var(--white);
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #ffc451;
+  color: var(--golden-tainoi);
 }
 
 #footer .footer-top .footer-newsletter form {
   margin-top: 30px;
-  background: #fff;
+  background: var(--white);
   padding: 6px 10px;
   position: relative;
   border-radius: 4px;
@@ -1590,7 +1590,7 @@ section {
   background: none;
   /* font-size: 16px; */
   padding: 0 20px;
-  background: #ffc451;
+  background: var(--golden-tainoi);
   color: #151515;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -1609,19 +1609,19 @@ section {
   padding-top: 10px;
   text-align: center;
   /* font-size: 13px; */
-  color: #fff;
+  color: var(--white);
 }
 
 .menu-bar {
   background-color: #000;
 }
 .form-control {
-  border-color: #fff;
+  border-color: var(--white);
   /* font-size: 14px; */
   border-radius: 4px;
 }
 .form-select1 {
-  border-color: #fff;
+  border-color: var(--white);
   /* font-size: 14px; */
   border-radius: 4px;
 }
@@ -1648,7 +1648,7 @@ section {
   font-weight: bold;
 }
 .box-content {
-  background-color: #fff;
+  background-color: var(--white);
   color: #000;
   text-align: left;
 }
@@ -1673,7 +1673,7 @@ section {
 }
 .btn-search:hover {
   background-color: transparent;
-  color: #fff;
+  color: var(--white);
   border:1px solid #ffc107 ;
 }
 .bg_warning {
@@ -1804,7 +1804,7 @@ img.img-fluid.img-thumbnail.pull-left1 {
   text-align: center;
 }
 .breadcrumb li {
-  color: #ffc451;
+  color: var(--golden-tainoi);
   padding-right: 8px;
 }
 .breadcrumb {
@@ -1819,7 +1819,7 @@ img.img-fluid.img-thumbnail.pull-left1 {
      font-weight: 700;
  }
  .table tr th {
-  color: #fff;
+  color: var(--white);
   /* font-size: 14px; */
   background:#061160
 }
@@ -1857,13 +1857,13 @@ ul.tabs li {
 /* .tab_last { border-right: 1px solid #333; } */
 
 ul.tabs li:hover {
-	background-color: #ccc;
+	background-color: var(--chinese-silver);
 	color: #333;
 }
 
 ul.tabs li.active {
   background-color: #F5A304;
-  color: #fff;
+  color: var(--white);
   display: block;
 }
 
@@ -1891,8 +1891,8 @@ ul.tabs li.active {
     padding: 1rem;
   }
 	.tab_drawer_heading {
-		background-color: #ccc;
-		color: #fff;
+		background-color: var(--chinese-silver);
+		color: var(--white);
 		margin: 0;
 		padding: 5px 20px;
 		display: block;
@@ -1906,13 +1906,13 @@ ul.tabs li.active {
 	}
 	.d_active {
 		background-color: #F5A304;
-		color: #fff;
+		color: var(--white);
 	}
 }
 /* tabs end here */
 /* form start here */
 .btn_cancle {
-  background: #f04444;color: #fff;
+  background: #f04444;color: var(--white);
 }
 .btn_cancle:hover {
   background: transparent;
@@ -1921,7 +1921,7 @@ ul.tabs li.active {
 }
 .btn_submit {
   background-color: #061160;
-  color: #fff;
+  color: var(--white);
 }
 .btn_submit:hover {
   background: transparent;
@@ -1934,7 +1934,7 @@ ul.tabs li.active {
   border-radius: 4px;
   padding: 8px;
   gap: 10px;
-  color: #fff;
+  color: var(--white);
 }
 .login-referesh {
   background: #ffffff;
@@ -2024,7 +2024,7 @@ sup {
 }
 .statstics-img {width: 50px;}
 .box-statistics {
-  background-color: #fff;
+  background-color: var(--white);
   /* box-shadow: 1px 1px 4px 1px #00000047; */
   padding: 10px 10px 10px 20px;
   border-radius: 4px; display: flex;
@@ -2086,7 +2086,7 @@ sup {
   border-radius: 8px;
   border: 1px solid transparent;
   transition: all 0.35s ease-in-out;
-  background: #fff;
+  background: var(--white);
   padding-top: 20px;
   display: flex;
   flex-direction: row;
@@ -2120,7 +2120,7 @@ sup {
   justify-content: center;
   position: relative;
 
-  color: #fff;
+  color: var(--white);
   text-decoration: none;
   width: 100%;
 }
@@ -2167,7 +2167,7 @@ bottom: 0px;}
   transform: scale(1.2);
 }
 .btn_farmer_reg {
-  color: #fff;
+  color: var(--white);
   padding: 0.4rem 0.8rem;
   font-weight: 600;
   border: 1px solid #a6e593;
@@ -2177,11 +2177,11 @@ bottom: 0px;}
   background: transparent;
 }
 .btn_farmer_reg:hover {
-  color: #fff;
+  color: var(--white);
   background-color: #c15635;
 }
 .btn_drplog {
-  color: #fff;
+  color: var(--white);
   padding: 0.4rem 0.8rem;
   font-weight: 600;
   border: 1px solid #ff860a;
@@ -2191,7 +2191,7 @@ bottom: 0px;}
   background: #c15635;
 }
 .btn_drplog:hover {
-  color: #fff;
+  color: var(--white);
   background-color: #5e1f0c;
 }
 @media (max-width:767px) {
@@ -2237,7 +2237,7 @@ bottom: 0px;}
   text-align: center;
 }
 .breadcrumb li {
-  color: #ffc451;
+  color: var(--golden-tainoi);
   padding-right: 8px;
 }
 .breadcrumb {
@@ -2250,7 +2250,7 @@ bottom: 0px;}
 .screen-reader h1 {
   /* font-size: 36px; */
   font-weight: 700;
-  color: #fff;
+  color: var(--white);
  }
  .form-check label{
   color: var(--yellow-text);
@@ -2282,7 +2282,7 @@ bottom: 0px;}
   filter: brightness(0) invert(1);
 }
 .btn_chqreg:hover {
-  color: #2EB73D;
+  color: var(--green-text);
 }
 .btn_chqreg img {
 position: relative;
@@ -2351,7 +2351,7 @@ bottom: 4px;
 }
 
 .circulars h2 {
- color: #fff;
+ color: var(--white);
 }
 
 .circulars ul {
@@ -2392,7 +2392,7 @@ bottom: 4px;
 }
 .circulars a:hover {
   text-decoration: underline;
-  color: #2EB73D;
+  color: var(--green-text);
 }
 /* our leader css */
 /* dashboard css */
@@ -2437,7 +2437,7 @@ position: relative;
 z-index: 4;
 text-transform: uppercase;
 /* font-size: 1.25rem; */
-color: #fff;
+color: var(--white);
 padding-bottom: .7rem;
 font-weight: 600;
 }
@@ -2461,8 +2461,8 @@ padding-left: 24px;
 color: var(--yellow-text);
 }
 .card_box li a:hover {
-border-bottom: 1px solid #2EB73D;
-color: #2EB73D;
+border-bottom: 1px solid var(--green-text);
+color: var(--green-text);
 }
 
 /* dashboard css */
@@ -2491,7 +2491,7 @@ marquee {
 .ticker_breaking {
   white-space: nowrap;
   background: transparent;
-  color: #fff;
+  color: var(--white);
   overflow: hidden;
   padding: 10px;
   display: inline-block;
@@ -2506,7 +2506,7 @@ marquee {
 
 .ticker_viewport {
   background: transparent;
-  color: #fff;
+  color: var(--white);
   overflow: hidden;
   padding: 10px 0;
   display: inline-block;
@@ -2516,10 +2516,10 @@ marquee {
 .ticker_viewport a {
   /* font-size: 0.875rem; */
   cursor: pointer;
-  color: #fff;
+  color: var(--white);
   text-decoration: none;
   padding-right: .9rem;
-  border-right: 1px solid #fff;
+  border-right: 1px solid var(--white);
 }
 
 .ticker_viewport a:hover {
@@ -2573,7 +2573,7 @@ font-weight: 600;
 }
 .annc_heading a:hover {
 text-decoration: underline;
-color: #2EB73D;
+color: var(--green-text);
 font-weight: 600;
 }
 .announcement ul {
@@ -2601,7 +2601,7 @@ font-weight: 400;
 }
 
 .announcement li a:hover {
-color: #2EB73D;
+color: var(--green-text);
 }
 
 .announcement li sup {
@@ -2614,7 +2614,7 @@ font-weight: 400;
 }
 
 .advisory {
-border-left: 1px solid #ccc;
+border-left: 1px solid var(--chinese-silver);
 padding-left: 6rem;
 }
 
@@ -2675,7 +2675,7 @@ margin-bottom: 2rem;
 display: flex;
 justify-content: center;
 align-items: center;
-border-left: 1px solid #ccc;
+border-left: 1px solid var(--chinese-silver);
 }
 
 .announce_img img {
@@ -2691,7 +2691,7 @@ max-width: 450px;
 .gallery_sec {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid var(--white);
   margin-bottom: 2rem;
 }
 
@@ -2900,7 +2900,7 @@ max-width: 450px;
 }
 
 .useful_link li a:hover {
-  color: #2EB73D;
+  color: var(--green-text);
 }
 
 .footer_mid {
@@ -2986,8 +2986,8 @@ max-width: 450px;
 .footer_menu {
   padding: 1rem 0;
   margin-bottom: 1rem;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
+  border-top: 1px solid var(--chinese-silver);
+  border-bottom: 1px solid var(--chinese-silver);
 }
 
 .footer_menulist ul {
