--- a/src/app/cms/home/home.component.html
+++ b/src/app/cms/home/home.component.html
@@ -138,7 +138,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4" [attr.data-aos]="'slide-left'">
           <div class="circulars">
             <h2 class="subheading">{{'CIRCULAR'|translate}}</h2>
             <div class="scroll-bar-wrap">
@@ -185,7 +185,7 @@
   <section class="dashboard_bg">
     <div class="gradint">
       <div class="container-fluid">
-        <div class="row">
+        <div class="row" [attr.data-aos]="'slide-right'">
           <div class="col-lg-8">
 
             <div class="dashboard_sec">
@@ -193,7 +193,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row" [attr.data-aos]="'slide-right'">
 
           <div class="col-lg-4">
 
@@ -282,7 +282,7 @@
   <section class="annc_bg">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6" [attr.data-aos]="'flip-right'">
           <div class="announcement">
             <div class="annc_heading">
               <h2 class="subheading">{{'ANNOUNCEMENT'|translate}}</h2>
@@ -325,7 +325,7 @@
         </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6" [attr.data-aos]="'flip-left'">
           <div class="advisory">
             <div class="advisory_heading">
               <h2 class="subheading">{{'ADVISORY' | translate}}</h2>
@@ -419,7 +419,7 @@
       </div>
     </div>
   </section>
-  
+
     <!-- End Services Section -->
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients">
@@ -437,7 +437,7 @@
 
             </swiper>
         </div>
-          
+
         </div>
     </section>
     <!-- End Clients Section -->
