--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <!-- footer start  here -->
 <footer class="footer">
-  <div class="footer_top">
+  <!-- <div class="footer_top">
     <div class="container-fluid">
       <div class="row">
         <div class="useful_link">
@@ -22,7 +22,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="footer_mid">
     <div class="container-fluid">
       <div class="row">
