--- a/src/styles.css
+++ b/src/styles.css
@@ -177,4 +177,21 @@ h6 {
   font-weight: 500;
   line-height: 1.05rem;
   }
+  .swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
+    margin-left: -25px !important;
+    font-size: 16px !important;
+    font-weight: bold;
+    background-color: #fff;
+    padding: 2px;
+  }
+  .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+    font-size: 16px !important;
+    margin-left: 29px !important;
+    font-weight: bold;
+    background-color: #fff;
+    padding: 2px;
 
+  }
+  .HINDI ul >li {
+    font-size: 16px;
+  }
