--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,7 @@
     --black-border: #151515;
     --golden-tainoi: #ffc451;
     --chinese-silver: #ccc;
+    --light-maroon: #521e1b;
 }
 
 html {
@@ -86,7 +87,10 @@ h6 {
     border-radius: 4px;
     transition: all 0.4s;
   }
-
+/* img {
+  max-width: 100%;
+  height: auto;
+} */
 
 /*--------------------------------------------------------------
 # Preloader
