--- a/src/app/cms/home/home.component.html
+++ b/src/app/cms/home/home.component.html
@@ -5,7 +5,7 @@
     <carousel [interval]="3000" class="carousel">
       <slide *ngFor="let slide of bannerImages" [active]="slide.active">
         <img [src]="slide.image" alt="Carousel Image">
-        <div class="carousel-caption">
+        <div class="carousel-caption d_none">
           <h1>
             {{slide.title | translate}}
              </h1>
