--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,8 @@
     --golden-tainoi: #ffc451;
     --chinese-silver: #ccc;
     --light-maroon: #521e1b;
+    --dark-red: #c8131a;
+    --grey: #747474;
 }
 
 html {
