--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -92,7 +92,7 @@
             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">
               {{'SCHEMES_GUIDELINES' | translate}}
             </a>
-            <ul class="dropdown-menu scheme-submenu" aria-labelledby="navbarDropdown">
+            <ul class="dropdown-menu scheme-submenu scroll-box" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#">{{'option1' | translate}}</a></li>
               <li><a class="dropdown-item" href="#">{{'option2' | translate}}</a></li>
               <li><a class="dropdown-item" href="#">{{'option3' | translate}}</a></li>
