--- a/src/assets/css/light.css
+++ b/src/assets/css/light.css
@@ -138,7 +138,8 @@
   padding: 1rem;
 }
 .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
-  color: rgb(255 255 255);
+  /* color: rgb(255 255 255); */
+  color : #e1c078;
 }
 .navbar ul {
   margin: 0;
