--- a/src/app/cms/home/home.component.html
+++ b/src/app/cms/home/home.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [isMenu]="true"></app-header>
 <div class="carousel">
   <div class="banner_bg"><img src="assets/img/banner_bg.jpeg"></div>
   <div class="carousel__slide">
