--- a/src/app/cms/screen-reader/screen-reader.component.html
+++ b/src/app/cms/screen-reader/screen-reader.component.html
@@ -1,7 +1,7 @@
-<app-header></app-header>
+<app-header [isMenu]="true"></app-header>
 
 <main id="mainInner">
-  <section class="p-10 mtt inner-header divider layer-overlay overlay-dark" style="background: url(assets/img/banner1.jpg);">
+  <section class="p-10 mtt inner-header divider layer-overlay overlay-dark heading-img">
     <div class="container ">
       <!-- Section Content -->
       <div class="section-content text-left">
@@ -10,7 +10,7 @@
             <ol class="breadcrumb text-center mt-10 white">
               <li><a href="/">Home</a></li>
               <li>/</li>
-              <li><a href="#">Screen Reader</a></li>
+              <li class="font-weight-bold">Screen Reader</li>
             </ol>
           </div>
         </div>
