--- a/src/app/user-management/login/login.component.html
+++ b/src/app/user-management/login/login.component.html
@@ -1,22 +1,7 @@
 <app-header [isMenu]="false"></app-header>
 <main id="mainInner">
 
-  <section class="p-10 without-menu inner-header divider layer-overlay overlay-dark heading-img">
-    <div class="container ">
-      <!-- Section Content -->
-      <div class="section-content text-left">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3 text-left">
-            <ol class="breadcrumb text-center mt-10 white">
-              <li><a routerLink="/">Home</a></li>
-              <li>/</li>
-              <li class="font-weight-bold">Login</li>
-            </ol>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <app-page-heading [pageHeading]="'Login'"></app-page-heading>
   <form [formGroup]="formGroup" (ngSubmit)="login()">
     <div class="container">
       <div class="row  justify-content-md-center">
