--- a/src/app/user-management/users/add/add.component.html
+++ b/src/app/user-management/users/add/add.component.html
@@ -1,5 +1,7 @@
-
-<form [formGroup]="formGroup">
+<app-header [isMenu]="false"></app-header>
+<main id="mainInner">
+  <app-page-heading [pageHeading]="'User Registration'"></app-page-heading>
+<form [formGroup]="formGroup" class="shadow p-4">
 <div class="container">
   <legend>Add A New User</legend>
   <div class="row">
@@ -36,8 +38,24 @@
     </div>
     <div class="col-md-4">
       <div class="mb-3">
-        <app-form-control [inputId]="'role'" [dropdownData]="role" [lable]="'Role'" [control]="formGroup.controls.role"
-          [inputType]="'select'" [isRequired]="true"></app-form-control>
+        <form [formGroup]="myForm">
+          <label  class="form-label">Role <span class="text-danger">*</span></label>
+          <ng-multiselect-dropdown
+              name="role"
+              [placeholder]="'Select'"
+              formControlName="role"
+              [settings]="dropdownSettings"
+              [data]="roles"
+              (onSelect)="onItemSelect($event)"
+              (onSelectAll)="onSelectAll($event)"
+              (onDeSelect)="onItemDeSelect($event)"
+              (onDeSelectAll)="onItemDeSelectAll($event)"
+              >
+          </ng-multiselect-dropdown>
+     </form>
+
+        <!-- <app-form-control [inputId]="'role'" [dropdownData]="role" [lable]="'Role'" [control]="formGroup.controls.role"
+          [inputType]="'select'" [isRequired]="true"></app-form-control> -->
       </div>
     </div>
   </div>
@@ -47,5 +65,11 @@
   <button type="submit" class="btn btn-dark" (click)="update()"
     *ngIf="route.snapshot.params['page'] == 'edit'">Update</button>
 
+    
+  <app-form-control [lable]="'Back'" [btnType]="'button'" [inputType]="'submitbtn'" [isLabel]="false" cssClass="btn-orange"
+  class="ms-2" routerLink="/list-user" >
+  </app-form-control>
+
 </div>
 </form>
+</main>
