--- a/src/app/cms/screen-reader/screen-reader.component.html
+++ b/src/app/cms/screen-reader/screen-reader.component.html
@@ -1,22 +1,8 @@
 <app-header [isMenu]="true"></app-header>
 
 <main id="mainInner">
-  <section class="p-10 mtt inner-header divider layer-overlay overlay-dark heading-img">
-    <div class="container ">
-      <!-- Section Content -->
-      <div class="section-content text-left">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3 text-left">
-            <ol class="breadcrumb text-center mt-10 white">
-              <li><a href="/">Home</a></li>
-              <li>/</li>
-              <li class="font-weight-bold">Screen Reader</li>
-            </ol>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <div class="mtt"></div>
+  <app-page-heading [pageHeading]="'Screen Reader'"></app-page-heading>
   <section class="services" id="service">
     <div class="container">
       <div class="row">
