--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 @import "~aos/dist/aos.css";
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
-
+@import '~ngx-bootstrap/datepicker/bs-datepicker.css';
 
 
 :root {
@@ -204,3 +204,8 @@ h6 {
 
   .without-menu {margin-top: 130px;}
   .heading-img {background: url(assets/img/banner1.jpg);}
+  .multiselect-dropdown .dropdown-btn {
+    border: 1px solid #d5d4d4 !important;
+    padding: 7px 12px !important;
+    
+  }
