--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,4 +8,10 @@
     display: block;
     opacity: 1;
   }
-  
+.close {
+  position: absolute;
+    right: 15px;
+    font-weight: bold;
+    width: 30px;
+    cursor: pointer;
+}  
