--- a/src/app/user-management/users/list/list.component.html
+++ b/src/app/user-management/users/list/list.component.html
@@ -4,23 +4,12 @@
   <app-page-heading [pageHeading]="'User Registration'"></app-page-heading>
 
   <div class="container mt-2">
-    <!-- <button class="btn btn-primary me-2" (click)="showList()"><mat-icon>list</mat-icon></button>
-  <button class="btn btn-danger" (click)="showGrid()"><mat-icon>grid_on</mat-icon></button> -->
-
-    <!-- <app-form-control [btnType]="'button'" [inputType]="'submitbtn'" [isLabel]="false" cssClass="btn-primary me-2" 
-  [maticon]="'list'" [isIcon]="true" (click)="showList()">
-  </app-form-control>
-
-  <app-form-control [btnType]="'button'" [inputType]="'submitbtn'" [isLabel]="false" cssClass="btn-danger me-2" 
-  [maticon]="'grid_on'" [isIcon]="true" (click)="showGrid()">
-  </app-form-control> -->
-
     <app-form-control [lable]="'+ Add A New User'" [btnType]="'button'" [inputType]="'submitbtn'" [isLabel]="false"
       cssClass="btn-orange" routerLink="add-user">
     </app-form-control>
   </div>
 
-  <div class="container mt-2" *ngIf="isShowList">
+  <div class="container mt-2">
     <app-table [tableData]="userData" [tableColumns]="usersTableColumns" [isFilterable]="true" [isPageable]="true"
       [paginationSizes]="[5,10,25]" [defaultPageSize]="5" (sort)="sortData($event)" [rowActionIcon]="'edit'"
       [actions]="tableActions" [recordCount]="count">
@@ -28,32 +17,6 @@
     <!-- (rowAction)="editUser($event)" -->
   </div>
 
-  <div class="container mt-2" *ngIf="isShowGrid">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col" *ngFor="let user of users$ | async">
-        <div class="card">
-          <!-- <img src="/assets/user.png" class="card-img-top" alt="..." /> -->
-          <div class="card-body">
-            <h5 class="card-title">{{ user.firstName }} {{ user.lastName }}
-              <p class="fs-6 text-primary">{{user.role}}</p>
-              <p class="fs-6 text-info">{{user.gender}}</p>
-            </h5>
-          </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">{{ user.email }}</li>
-            <li class="list-group-item">{{ user.mobileNo }}</li>
-          </ul>
-          <div class="card-body">
-            <a [routerLink]="['edit-user', user._id,'edit']" class="btn btn-primary me-2">Edit <i
-                class="bi bi-pencil-fill"></i></a>
-            <button class="btn btn-danger" (click)="openDeleteModal(user._id)">
-              Delete <i class="bi bi-trash-fill"></i>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   
   <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <app-dialog (callbackDelete)="delete()" [dialogContent]="userName" [closeText]="'Close'"
