--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -9,7 +9,7 @@
         </mat-form-field>
       </ng-container>
     </div>
-    <div class="col-md-6 count">
+    <div class="col-md-6 count font-weight-bold">
     Total Count: {{recordCount}}
     </div>
 
